JSR94 compatibility updates